Completed the project, just need for it to be reviewed and submitted

--- a/project.ipynb
+++ b/project.ipynb
@@ -72,27 +72,27 @@
     "1) Data cleaning and visualization\n",
     "2) Build translation of english texts (using FlanT5 and M2M)\n",
     "\n",
-    "- choose a easy translatable language (English -> Spanish) and then a hard one (English -> Farsi)\n",
+    "    - Choose a easy translatable language (English -> Spanish) and then a hard one (English -> Chinese)\n",
     "\n",
-    "3) Validate it (??? somehow, Google translate API, https://github.com/matheuss/google-translate-api)\n",
+    "3) Validate it (using Google Translate API, https://github.com/matheuss/google-translate-api)\n",
     "\n",
-    "- comment on pitfalls of google translate's innaccuracy\n",
+    "    - Comment on pitfalls of google translate's innaccuracy\n",
     "\n",
-    "- discuss how well translation models are at translating emotionally charged texts\n",
-    "    - compare it to a baseline (maybe google and see what the average performance is likee)\n",
+    "    - Discuss how well translation models are at translating emotionally charged texts\n",
     "\n",
     "4) Baseline models (log reg, random forest, naive bayes)\n",
     "\n",
+    "    - Compare baseline models and their performance across different languages\n",
+    "\n",
     "5) Run BERT and attempt to compare labels\n",
     "\n",
-    "6) repeat 4 and 5 for all the other languages we test\n",
+    "6) Repeat Steps 4 and 5 for all the other languages we test\n",
     "\n",
-    "7) validate scores\n",
+    "7) Validate scores\n",
     "\n",
-    "8) Compare scores between languages (Perform some t-test shit idk)\n",
+    "8) Compare scores between languages and create classification plots\n",
     "\n",
-    "\n",
-    "https://www.kaggle.com/datasets/reihanenamdari/mental-health-corpus/data"
+    "9) Conclusion/Reflection on results"
    ]
   },
   {
@@ -2053,7 +2053,7 @@
     }
    ],
    "source": [
-    "# TODO: Run translation validation (using Google Translate API as validation set)\n",
+    "# Run translation validation (using Google Translate API as validation set)\n",
     "# https://pypi.org/project/googletrans/\n",
     "\n",
     "\n",
@@ -2062,7 +2062,6 @@
     "\n",
     "# Function to validate translations using Google Translate API\n",
     "def validate_translations(original_texts, translated_texts, target_lang):\n",
-    "    # validated_translations = []\n",
     "    boundary = 0\n",
     "    for i, text in enumerate(original_texts):\n",
     "        if boundary > 14: \n",
@@ -2075,39 +2074,6 @@
     "        boundary+=1\n",
     "\n",
     "\n",
-    "    \n",
-    "    # for i, text in enumerate(original_texts):\n",
-    "    #     print(i)\n",
-    "    #     print(text)\n",
-    "    #     print(translated_texts)\n",
-    "    #     retry_count = 0\n",
-    "        \n",
-    "    #     while retry_count < max_retries:\n",
-    "    #         try:\n",
-    "    #             # Translate the original text to the target language using Google Translate API\n",
-    "                \n",
-    "    #             print(translation)\n",
-    "                \n",
-    "    #             # Check if the translated text matches the Google Translate API result\n",
-    "    #             if translation.lower() == translated_texts[i].lower():\n",
-    "    #                 validated_translations.append(True)\n",
-    "    #             else:\n",
-    "    #                 validated_translations.append(False)\n",
-    "    #             break  \n",
-    "                \n",
-    "    #         except Exception as e:\n",
-    "    #             print(f\"Error validating translation for text {i}: {e}\")\n",
-    "    #             retry_count += 1\n",
-    "    #             time.sleep(1)  # Introduce a short delay before retrying\n",
-    "        \n",
-    "    #     if retry_count == max_retries:\n",
-    "    #         print(f\"Max retries reached for text {i}. Validation failed.\")\n",
-    "    #         validated_translations.append(False)\n",
-    "    #     print(validated_translations)\n",
-    "    \n",
-    "    # return validated_translations\n",
-    "\n",
-    "\n",
     "# Validate translations for French and print results (compare 15 meta translated texts and google translated texts)\n",
     "print(\"French Translated Text\")\n",
     "validate_translations(french_df[\"text\"], mh_texts['text'].to_list(),  'en')\n",
@@ -2116,8 +2082,7 @@
     "\n",
     "# Validate translations for Chinese and print results\n",
     "print(\"Chinese Translated Text\")\n",
-    "validate_translations(chinese_df[\"text\"], mh_texts['text'].to_list(), 'en')\n",
-    "\n"
+    "validate_translations(chinese_df[\"text\"], mh_texts['text'].to_list(), 'en')"
    ]
   },
   {
@@ -2130,7 +2095,7 @@
     "The Meta Translation API has multiple pitfalls when it comes to its translation of texts. One challenge lies in the accuracy and consistency of the translations, which can vary across many different languages and it can struggle with complex sentences or nuanced language. Since this dataset consists of primarily text messages, the Meta Translation API is under much more \"stress\" since the model has a limited contextual understanding which can lead to mistranslations. The translated texts do exhibit variations in wordings, but in some instances, completely fail to convey the emotional depth that was intended by the sender. As a result, this showcases a significant limitation of the API and its ability to preserve the emotional context of these texts as the translated texts lose meaning. \n",
     "\n",
     "\n",
-    "##### Discuss how well translation models are at translating emotinally charged texts\n",
+    "##### Discuss how well translation models are at translating emotionally charged texts\n",
     "As shown through the Google Translation API and Meta Translation API, translating emotionally charged texts with current models is quite limited. the Google Translation API showcases how limited its understanding of terms is where it often abbreviates text that it considers to be extraneous. For example, the original said \"ok redflagwatch ive ruled redflag fuck myself ive mostly miserable life finally resolved kill...\" and the Google translated text was just \"Ok Redflagwatch 4\", showing its inherent disregard for true meaning. Additionally, issues may arise due to the subjective nature of emotions, cultural variations in expressing sentiments, and the need for a deep understanding of context. As a result, while these models have made significant strides, achieving a nuanced and emotionally accurate translation remains a complex task, emphasizing the ongoing importance of human involvement in ensuring sensitive and precise language interpretation."
    ]
   },
@@ -2477,7 +2442,89 @@
     "id": "Vsq-1YR318qs"
    },
    "source": [
-    "#### Compare the baseline models and how good their predictions are with each language\n"
+    "#### Compare the baseline models and how good their predictions are with each language\n",
+    "\n",
+    "##### Model Performance for English Translated Mental Health Texts\n",
+    "\n",
+    "##### Logistic Regression:\n",
+    "- **Precision (Overall Accuracy):** 85%\n",
+    "- **Recall for Mental Health Concerns:** 78%\n",
+    "- **Recall for No Concern:** 93%\n",
+    "- **F1-Score:** 85%\n",
+    "\n",
+    "##### Naive Bayes:\n",
+    "- **Precision (Overall Accuracy):** 75%\n",
+    "- **Recall for Mental Health Concerns:** 99%\n",
+    "- **Recall for No Concern:** 49%\n",
+    "- **F1-Score:** 73%\n",
+    "\n",
+    "##### Random Forest:\n",
+    "- **Precision (Overall Accuracy):** 80%\n",
+    "- **Recall for Mental Health Concerns:** 71%\n",
+    "- **Recall for No Concern:** 89%\n",
+    "- **F1-Score:** 80%\n",
+    "\n",
+    "##### Model Performance for French Translated Mental Health Texts\n",
+    "\n",
+    "###### Logistic Regression:\n",
+    "- **Precision (Overall Accuracy):** 41%\n",
+    "- **Recall for Mental Health Concerns:** 32%\n",
+    "- **Recall for No Concern:** 48%\n",
+    "- **F1-Score:** 33%\n",
+    "\n",
+    "##### Naive Bayes:\n",
+    "- **Precision (Overall Accuracy):** 42%\n",
+    "- **Recall for Mental Health Concerns:** 39%\n",
+    "- **Recall for No Concern:** 44%\n",
+    "- **F1-Score:** 38%\n",
+    "\n",
+    "##### Random Forest:\n",
+    "- **Precision (Overall Accuracy):** 43%\n",
+    "- **Recall for Mental Health Concerns:** 52%\n",
+    "- **Recall for No Concern:** 36%\n",
+    "- **F1-Score:** 46%\n",
+    "\n",
+    "##### Model Performance for Chinese Translated Mental Health Texts\n",
+    "\n",
+    "##### Logistic Regression:\n",
+    "- **Precision (Overall Accuracy):** 54%\n",
+    "- **Recall for Mental Health Concerns:** 26%\n",
+    "- **Recall for No Concern:** 86%\n",
+    "- **F1-Score:** 38%\n",
+    "\n",
+    "##### Naive Bayes:\n",
+    "- **Precision (Overall Accuracy):** 57%\n",
+    "- **Recall for Mental Health Concerns:** 35%\n",
+    "- **Recall for No Concern:** 81%\n",
+    "- **F1-Score:** 46%\n",
+    "\n",
+    "##### Random Forest:\n",
+    "- **Precision (Overall Accuracy):** 51%\n",
+    "- **Recall for Mental Health Concerns:** 71%\n",
+    "- **Recall for No Concern:** 27%\n",
+    "- **F1-Score:** 61%\n",
+    "\n",
+    "###### Observations:\n",
+    "\n",
+    "- **English Translated Texts:**\n",
+    "  - All models perform relatively well, with Logistic Regression being the most balanced.\n",
+    "  - Naive Bayes excels in recall for mental health concerns but struggles with overall accuracy.\n",
+    "  - Random Forest demonstrates a good balance between precision and recall.\n",
+    "\n",
+    "- **French Translated Texts:**\n",
+    "  - All models struggle with low precision and recall, indicating challenges in classifying mental health expressions in French.\n",
+    "\n",
+    "- **Chinese Translated Texts:**\n",
+    "  - Logistic Regression and Naive Bayes perform moderately, with Logistic Regression having higher overall accuracy.\n",
+    "  - Random Forest outperforms others in terms of F1-Score, showing a better balance between precision and recall.\n",
+    "\n",
+    "##### Implications:\n",
+    "\n",
+    "- The choice of the baseline model is crucial and depends on the specific requirements of the application. Logistic Regression, with its balanced performance, may be a suitable choice for accurate predictions in this context.\n",
+    "\n",
+    "- The effectiveness of models varies across languages, highlighting the importance of language-specific considerations in mental health text classification.\n",
+    "\n",
+    "- Further optimization and fine-tuning of models, possibly using more advanced architectures like BERT, could potentially enhance predictive capabilities, especially in handling the nuances of mental health expressions across languages.\n"
    ]
   },
   {
@@ -3707,15 +3754,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "w4UtY9iF18qs"
-   },
-   "source": [
-    "## 3. Results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "B8qAuWBr18qs"
    },
    "source": [
@@ -3728,7 +3766,7 @@
     "id": "XhMaYb4WBSpd"
    },
    "source": [
-    "Baselines:\n",
+    "##### Baseline Comparison\n",
     "\n",
     "English: 0.85-0.86\n",
     "\n",
@@ -3736,15 +3774,18 @@
     "\n",
     "Chinese: 0.56-0.57\n",
     "\n",
-    "1) BERT beats these explain why and describe it\n",
+    "In comparing the baselines with the performance of your BERT models, notable improvements are observed across all languages.\n",
     "\n",
-    "2) Model predicts mental health concerns better in English, then Chinese then French. Explains why signs of mental health may be different in each language.\n",
+    "- English: Baseline F1 score of 0.85-0.86 is surpassed by the BERT model, achieving an F1 score of 0.87. This improvement highlights the effectiveness of fine-tuning BERT for mental health text classification in English.\n",
     "\n",
-    "- touch on cultural precedences and topic of mental health\n",
+    "- French: The baseline F1 score of 0.43 is significantly enhanced by the BERT model, reaching an F1 score of 0.49. Despite the relative increase, the French model still exhibits lower performance compared to English.\n",
     "\n",
-    "- vastness in words (# of words existing in each language)\n",
+    "- Chinese: The baseline F1 score of 0.56-0.57 is notably outperformed by the BERT model, achieving an F1 score of 0.68. This substantial improvement signifies the model's capability to better discern mental health concerns in Chinese text.\n",
     "\n",
-    "- does it beat hypothesis ?"
+    "Overall, BERT as a model beats the baseline models due to the fact that it has more training parameters and learns more and more over time as you train it. The baseline models don't necessarily have the intricate training process that Large Language Models like BERT do. Additionally, BERT with its massive amount of information showcases an advantage in terms of fine tuning different languages as well. \n",
+    "\n",
+    "\n",
+    "Based on the results alone, we can see that the model predicts mental health concerns better in English, then Chinese then French. This variability may be attributed to linguistic and cultural nuances influencing the manifestation and expression of mental health signs in different communities.  This is more or less aligned with our hypothesis where we stated that languages other than English would have a harder time being trained to understand emotionally charged texts and have less performance overall. However, it is interesting that Chinese performed better than French due to Asian culture's stigmatization of mental health. Even with this, I believe that the Chinese text performed better mainly because of the emphasis on Chinese culture's stigma against mental health, causing it to be trained on such data and giving us a higher score. Additionally, the success of the model in English could be influenced by a richer training dataset and a more nuanced understanding of mental health discussions within the English language. Within each language, there is also a varying number of words. French has about 135,000 words, English has about 170,000 words, Chinese has about 100,000 words. Due to the lower count of words in Chinese, it could also be a reason why Chinese performed better than French due to a difficulty in the model to differentiate between 135,000 words vs 100,000 words which is about 35% more words. As a result, our hypothesis is supported by the results that we have obtained. "
    ]
   },
   {
@@ -3755,9 +3796,15 @@
    "source": [
     "#### Pitfalls/Critiques\n",
     "\n",
-    "- BERT large language model has more overall more training parameters and learning dedicated to English than any other language. It is multilingual, however it's classification capabilities vary across languages\n",
-    "- Words may not directly translate over from generic english semantics\n",
-    "- Google translate may have shortcomings in terms of translations"
+    "- English Dominance in BERT: The BERT large language model has more training parameters dedicated to English, potentially leading to a bias in favor of this language. This imbalance may affect its performance in multilingual tasks.\n",
+    "\n",
+    "- Translation Challenges: Direct translation of words may not capture the nuanced semantics of mental health expressions across languages. The intricacies of mental health discussions may be lost in translation, impacting the model's cross-linguistic generalization.\n",
+    "\n",
+    "- Google Translate Limitations: Reliance on Google Translate for creating multilingual datasets may introduce errors or oversimplify translations. It might not fully capture the cultural and contextual subtleties necessary for accurate mental health classification.\n",
+    "\n",
+    "- Data Bias: The training data may not be representative of the diverse ways mental health concerns are expressed across cultures. Biases present in training data can result in a model that is skewed towards certain linguistic or cultural norms, potentially leading to misclassifications for underrepresented groups.\n",
+    "\n",
+    "- Contextual Sensitivity: Mental health discussions often rely heavily on context, which can vary significantly across languages and cultures. BERT may struggle to capture the intricate contextual cues that influence the interpretation of mental health expressions in different linguistic settings. "
    ]
   }
  ],
