--- a/project.ipynb
+++ b/project.ipynb
@@ -62,42 +62,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "6hXOeZK218qo"
-   },
-   "source": [
-    "Are signs of Mental health received differently across various languages? Can the \"emotionally involved\" semantics of a word be translated across various languages?\n",
-    "\n",
-    "https://www.kaggle.com/datasets/reihanenamdari/mental-health-corpus/data\n",
-    "\n",
-    "1) Data cleaning and visualization\n",
-    "2) Build translation of english texts (using FlanT5 and M2M)\n",
-    "\n",
-    "    - Choose a easy translatable language (English -> Spanish) and then a hard one (English -> Chinese)\n",
-    "\n",
-    "3) Validate it (using Google Translate API, https://github.com/matheuss/google-translate-api)\n",
-    "\n",
-    "    - Comment on pitfalls of google translate's innaccuracy\n",
-    "\n",
-    "    - Discuss how well translation models are at translating emotionally charged texts\n",
-    "\n",
-    "4) Baseline models (log reg, random forest, naive bayes)\n",
-    "\n",
-    "    - Compare baseline models and their performance across different languages\n",
-    "\n",
-    "5) Run BERT and attempt to compare labels\n",
-    "\n",
-    "6) Repeat Steps 4 and 5 for all the other languages we test\n",
-    "\n",
-    "7) Validate scores\n",
-    "\n",
-    "8) Compare scores between languages and create classification plots\n",
-    "\n",
-    "9) Conclusion/Reflection on results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "6J6gtSPY18qo"
    },
    "source": [
@@ -125,12 +89,26 @@
    },
    "source": [
     "##### Introduction\n",
-    "In the current technological advanced world that we live in, messaging and social media have become ways for us to express ourselves and communicate almost instantaneously. Due to this, often times, people find themselves \"chronically online\" and writing multiple messages to friends and people for many to see. As a result of COVID-19 and the variety of situations, mental health is on the decline and there is a necessity to understand what text messages people with mental health issues send so that we can help them before it is too late. However, mental health is not just an issue within the United States and it is imperative for us to analyze and understand how signs of mental health might be received across different languages. Additionally, within such texts, an active question comes out to whether or not we can translate \"emotionally involved semantics\" in English into different languages to allow for true understanding of the issue at hand. This is especially as some cultures may not readily communicate mental health issues within text messages due to various stigmas against it. As a result, there may not be datasets that record such instances within text messages and there is a need to understand this as well.\n",
+    "In the current technological advanced world that we live in, messaging and social media have become ways for us to express ourselves and communicate almost instantaneously. Due to this, often times, people find themselves \"chronically online\" and writing multiple messages to friends and people for many to see. As a result of COVID-19 and the variety of situations, mental health is on the decline and there is a necessity to understand what text messages people with mental health issues send so that we can help them before it is too late. However, mental health is not just an issue within the United States and it is imperative for us to analyze and understand how signs of mental health might be received across different languages. Additionally, within such texts, an active question comes out to whether or not we can translate \"emotionally involved semantics\" in English into different languages to allow for true understanding of the issue at hand. This is especially as some cultures may not readily communicate mental health issues within text messages due to various stigmas against it. As a result, there may not be datasets that record such instances within text messages of a specific language and there is a need to understand this as well.\n",
+    "\n",
+    "##### Research Question and Data\n",
+    "In this project, we look to explore the following questions:\n",
+    "\n",
+    "**Are signs of Mental health received differently across various languages? Are mental health concerns in some languages more pronounced?**\n",
+    "\n",
+    "We will also look into if **the \"emotionally involved\" semantics of a word be translated across various languages** through translation means. The dataset on mental health texts and associated labels, found on https://www.kaggle.com/datasets/reihanenamdari/mental-health-corpus/data\n",
+    "\n",
+    "** \"The Mental Health Corpus is a collection of texts related to people with anxiety, depression, and other mental health issues. The corpus consists of two columns: one containing the comments, and the other containing labels indicating whether the comments are considered poisonous or not. \"**\n",
+    "\n",
+    "First, we will explore, clean and visualize the dataset. Then we run a translation model on a sample of the data using Meta's M2M model and explore the text in French and Chinese. We will validate it and compare examples with the Google Translate API. Then, we will create models for each language, training and predicting the data on each respective language. We will then compare scores and how respective models performs in predicting mental health concerns across languages. We want to see to what extent, are the models able to pick up on signs and patterns of mental health concerns across languages \n",
+    "\n",
     "\n",
     "#### Hypothesis\n",
     "In this analysis of text messages, we hypothesize that signs of mental health issues that received differently across different languages. We believe that this is because of difference in cultures and due to the reasoning that within each culture, mental health is treated differently. For example, based on an article from UCLA Health (https://www.uclahealth.org/news/confronting-mental-health-barriers-asian-american-and-2), Asian Americans are 50% less likely to seek mental health services due to an stigmatization of the topic. As a result, text messages from Asian langauges/cultures indicated mental health issues might be less pronounced than those in other cultures. We also hypothesize that translating from these English messages with \"emotionally involved semantics\" to different languages will not be successful. We believe that this is because during the translation process, the meaning behind the texts will be lost and unable to be conveyed in another language correctly due to the apparent linguistical differences.   \n",
     "\n",
-    "We will create classification models to predict signs of mental health in English texts, French texts as well as Chinese Texts. The models will be trained in respective languages and we will see how well models perform at classifying texts as \"mental health concerns\" or \"no concern\" per language.\n"
+    "More specifically, we hypothesize that signs of mental health will be clearest in English, then in French and in Chinese. Largely, our conjecture comes from how liberalness and accepting each culture is respective to each other as seen in the present day (solely in comparision of the three). \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -2442,9 +2420,9 @@
     "id": "Vsq-1YR318qs"
    },
    "source": [
-    "#### Compare the baseline models and how good their predictions are with each language\n",
+    "### Comparing the baseline models and how good their predictions are with each language\n",
     "\n",
-    "##### Model Performance for English Translated Mental Health Texts\n",
+    "#### Model Performance for English Translated Mental Health Texts\n",
     "\n",
     "##### Logistic Regression:\n",
     "- **Precision (Overall Accuracy):** 85%\n",
@@ -2466,7 +2444,7 @@
     "\n",
     "##### Model Performance for French Translated Mental Health Texts\n",
     "\n",
-    "###### Logistic Regression:\n",
+    "##### Logistic Regression:\n",
     "- **Precision (Overall Accuracy):** 41%\n",
     "- **Recall for Mental Health Concerns:** 32%\n",
     "- **Recall for No Concern:** 48%\n",
@@ -2504,16 +2482,14 @@
     "- **Recall for No Concern:** 27%\n",
     "- **F1-Score:** 61%\n",
     "\n",
-    "###### Observations:\n",
+    "##### Observations:\n",
     "\n",
     "- **English Translated Texts:**\n",
     "  - All models perform relatively well, with Logistic Regression being the most balanced.\n",
     "  - Naive Bayes excels in recall for mental health concerns but struggles with overall accuracy.\n",
     "  - Random Forest demonstrates a good balance between precision and recall.\n",
-    "\n",
     "- **French Translated Texts:**\n",
     "  - All models struggle with low precision and recall, indicating challenges in classifying mental health expressions in French.\n",
-    "\n",
     "- **Chinese Translated Texts:**\n",
     "  - Logistic Regression and Naive Bayes perform moderately, with Logistic Regression having higher overall accuracy.\n",
     "  - Random Forest outperforms others in terms of F1-Score, showing a better balance between precision and recall.\n",
@@ -3697,6 +3673,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Classification Distribution in English\n",
+    "\n",
+    "Given that our dataset frequency is relatively 50-50 for each label, It can be observed that the most common classification outcome is labelling a mental-health concerning text as \"mental health concern\". The second most common case is classifying non-concerning text as no concern. The third most common outcome is misclassifying no concern as a \"mental health concern\". The fourth most common is misclassifying no concerns as \"mental health concerns\". This is also showcased as we analyzed the misclassifications and printed them out. Many of the English misclassifications were largely over-predicting non-concerning texts as mental health concerns\n",
+    "\n",
+    "As evident, our BERT model trained and predicting on English texts does a good job on picking up on signs of mental health concerns in texts. Although not grand, it can be said that the model actually over-predicts things to be a mental health concern as it labelled a few non-concerning texts as mental health concerns. It has little classifications of mental health concerns as no concern, illustrating that it picks up on a large and varied number of signs as mental health concenrs.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {
@@ -3721,6 +3708,17 @@
    ],
    "source": [
     "plot_classif(\"French\", data_splits[\"french\"][3], predicted['french'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Classification distribution in French \n",
+    "\n",
+    "Given that our dataset frequency is relatively 50-50 for each label, It can be observed that the most common classification outcome is labelling a non-concerning text as \"no concern\". The second most common outcome is misclassifying mental health concerns as \"no concern\". The third most common is misclassifying no concerns as \"mental health concerns\" and lastly correctly classifying mental health concerns as \"mental health concerns\". This is also showcased as we analyzed the misclassifications and printed them out. Many of the French misclassifications were largely dismissing mental health texts as no concern\n",
+    "\n",
+    "It is intriguing to note that the common classification of a mental health concern is predicting it to be \"no concern\". As such, it can be observed that the BERT model trained in French and predicting on French Text exhibit a common case of predicting a mental health concern as \"no concern\""
    ]
   },
   {
@@ -3749,6 +3747,54 @@
    "source": [
     "\n",
     "plot_classif(\"Chinese\", data_splits[\"chinese\"][3], predicted['chinese'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Classification distribution in Chinese \n",
+    "\n",
+    "Given that our dataset frequency is relatively 50-50 for each label, It can be observed that the most common classification outcome is labelling a mental-health concerning text as \"mental health concern\". The second most common case is classifying non-concerning text as no concern. The third most common outcome is misclassifying mental health concerns as \"no concern\". The last most common is misclassifying no concerns as \"mental health concerns\". This is also showcased as we analyzed the misclassifications and printed them out. Many of the Chinese misclassifications were pretty varied but missed a few more texts that were mental health concerns and labelled them as no concerns.\n",
+    "\n",
+    "As evident, our BERT model trained and predicting on Chinese texts does a good job on picking up on signs of mental health concerns in texts. It does however label a few mental health concerns as \"no concern\" however it is not as erroneous as the French model. THe models ability to pick up patterns of mental health concerns across chinese translated texts is very strong, though not as strong as the English translated model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Misclassifications visualization report\n",
+    "\n",
+    "We see stark differences across the predicting capabilities of each respective language and their models in various classification situations. To summarize:\n",
+    "\n",
+    "##### English Translations distribution\n",
+    "\n",
+    "1) predicting mental health texts as \"mental health concern\"\n",
+    "2) predicting non-concerning texts as \"no concern\"\n",
+    "3) predicting non-concerning texts as \"mental health concern\"\n",
+    "4) predicting mental health texts as \"no concern\"\n",
+    "\n",
+    "Model trained on English translations has a strong ability in recognizing signs of mental health across english texts (also evident by the accuracy and f1-scores)\n",
+    "\n",
+    "##### French Translations distribution\n",
+    "\n",
+    "1) predicting non-concerning texts as \"no concern\"\n",
+    "2) predicting mental health texts as \"no concern\"\n",
+    "3) predicting non-concerning texts as \"mental health concern\"\n",
+    "4) predicting mental health texts as \"mental health concern\"\n",
+    "\n",
+    "\n",
+    "Model trained on French translations does not do a very good job in seeing signs of mental health concerns across French texts (also evident by the accuracy and f1-scores)\n",
+    "\n",
+    "##### Chinese Translations distribution\n",
+    "\n",
+    "1) predicting non-concerning texts as \"no concern\"\n",
+    "2) predicting mental health texts as \"no concern\"\n",
+    "3) predicting mental health texts as \"mental health concern\"\n",
+    "4) predicting non-concerning texts as \"mental health concern\"\n",
+    "\n",
+    "Model trained on Chinese translations is able to readily pick up on signs of mental health concerns across Chinese texts (also evident by the accuracy and f1-scores)\n"
    ]
   },
   {
@@ -3785,7 +3831,9 @@
     "Overall, BERT as a model beats the baseline models due to the fact that it has more training parameters and learns more and more over time as you train it. The baseline models don't necessarily have the intricate training process that Large Language Models like BERT do. Additionally, BERT with its massive amount of information showcases an advantage in terms of fine tuning different languages as well. \n",
     "\n",
     "\n",
-    "Based on the results alone, we can see that the model predicts mental health concerns better in English, then Chinese then French. This variability may be attributed to linguistic and cultural nuances influencing the manifestation and expression of mental health signs in different communities.  This is more or less aligned with our hypothesis where we stated that languages other than English would have a harder time being trained to understand emotionally charged texts and have less performance overall. However, it is interesting that Chinese performed better than French due to Asian culture's stigmatization of mental health. Even with this, I believe that the Chinese text performed better mainly because of the emphasis on Chinese culture's stigma against mental health, causing it to be trained on such data and giving us a higher score. Additionally, the success of the model in English could be influenced by a richer training dataset and a more nuanced understanding of mental health discussions within the English language. Within each language, there is also a varying number of words. French has about 135,000 words, English has about 170,000 words, Chinese has about 100,000 words. Due to the lower count of words in Chinese, it could also be a reason why Chinese performed better than French due to a difficulty in the model to differentiate between 135,000 words vs 100,000 words which is about 35% more words. As a result, our hypothesis is supported by the results that we have obtained. "
+    "Based on the results alone, we can see that the model predicts mental health concerns better in English, then Chinese then French. This variability may be attributed to linguistic and cultural nuances influencing the manifestation and expression of mental health signs in different communities. This is more or less aligned with the first part of our hypothesis where we stated that languages other than English would have a harder time being trained to understand emotionally charged texts and have less performance overall. However, it is interesting that Chinese performed better than French due to Asian culture's stigmatization of mental health. As a result, our specific conjecture that French will outperform Chinese in predicting mental health concerns was rejected. \n",
+    "\n",
+    "Even with this, we believe that the Chinese text performed better mainly because of the richer history and nature of the Chinese language, often solemn poetry and arts have been a cultural precedent across dynasties and despite recent global affairs, the history of Chinese language is simply much more cultured than French. Additionally, the success of the model in English could be influenced by a richer training dataset and a more nuanced understanding of mental health discussions within the English language. Within each language, there is also a varying number of words. French has about 135,000 words, English has about 170,000 words, Chinese has about 100,000 words. Due to the lower count of words in Chinese, it could also be a reason why Chinese performed better than French due to a difficulty in the model to differentiate between 135,000 words vs 100,000 words which is about 35% more words. As a result, our hypothesis is supported by the results that we have obtained. "
    ]
   },
   {
